--- a/index.html
+++ b/index.html
@@ -1,80 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="'en">
+
+<!-- head content-->
 <head>
-    <meta charset="UTF-8">
+    <title> UHub </title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UHub - Stay Connected</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        img {
-            max-width: 200px;
-            margin-bottom: 20px;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .message {
-            margin-top: 10px;
-            color: green;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
+
 <body>
-
-    <div class="container">
-        <img src="logo.png" alt="UHub Logo">  <!-- Replace with your actual logo file -->
-        <h1>Welcome to UHub</h1>
-        <p>Stay updated with our latest news and features!</p>
-        
-        <form id="signupForm">
-            <input type="email" id="email" placeholder="Enter your email" required>
-            <button type="submit">Sign Up</button>
-        </form>
-
-        <p class="message" id="message"></p>
+<!-- Description -->
+ <div>
+    <div class="header">
+        <div class="page-top">
+            <div>   
+                <h1> UHub </h1>
+                <h3> Your University, Your Hub </h3> 
+            </div>
+                <img class="logo" src="photos/uhublogo.png">
+            </div>
+    <div>
+        <button onclick="location.href='index.html'" class="inline-buttons"> <b>What UHub is</b> </button>
+        <button onclick="location.href='timeline.html'" class="inline-buttons"> Timeline </button>
+        <button onclick="location.href='ourteam.html'" class="inline-buttons"> Our Team </button>
+        <button onclick="location.href='learnmore.html'" class="inline-buttons"> Learn More </button>
     </div>
-
-    <script>
-        document.getElementById("signupForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const email = document.getElementById("email").value;
-            document.getElementById("message").innerText = "Thank you for signing up, " + email + "!";
-            document.getElementById("email").value = "";
-        });
-    </script>
-
+    </div>
+    <hr class="break">
+    <div class="forty-width">
+        <div>
+            <h2> What is UHub? </h2>
+            <p class="functionality"> University students are overwhelmed by scattered job postings, club events, and research opportunities across emails, websites, 
+                and social media. UHub is the AI-powered, all-in-one platform that centralizes these opportunities, ensuring students never miss out. Through smart 
+                recommendations, seamless applications, and targeted event promotion, UHub connects students with the right opportunities while helping universities, 
+                clubs, and recruiters reach engaged audiences. With a proven market need and scalable monetization strategies, UHub is revolutionizing student engagement. </p>
+        </div>
+        <div>
+            <h2> What can you do on UHub? </h2>
+            <div>
+            <p class="functionality"> UHub encompasses several great features to streamline the process of finding involvement. </p>
+            <h4> Access to all Campus Events and Opportunities </h4>
+            <p class="functionality"> On UHub, users can expect to find opportunities such as campus jobs, research positions, club opportunities, and other campus events.</p>
+            <h4> Follow Organizations </h4>
+            <p class="functionality"> Users are able to follow organizations and receive notifications about new events and opportunities, to ensure users don't miss out.
+            </p>
+            <h4> Seamless access to events </h4>
+            <p class="functionality"> With UHub's built-in RSVP proccess, a few clicks is all you need to RSVP for events. </p>
+            <h4> Direct and Indirect Applications to Opportunities </h4>
+            <p class="functionality"> Users can apply either directly or indirectly (based on organization preference) for opportunities at clubs, companies, labs, etc.</p>
+            <h4> Master Calendar </h4>
+            <p class="functionality"> With UHub's master calendar, organizations that you follow's events and application deadlines will all be compiled into a master calendar. By consolidating 
+                this information, users are able to keep up to date with all deadlines to ensure they're not missing out.
+            </p>
+            </div>
+        </div>
+        <div>
+            <h2> Can I use UHub? </h2>
+            <p class="functionality"> If you are a student currently attending UBC, or if you are part of an organization associated with UBC or are looking to promote your organization, UHub is right for you! Furthermore, if you are considering attending UBC and are looking to gain insight on the events and opportunities occurring at UBC, then you are free to browse the app!</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
