--- a/learnmore.html
+++ b/learnmore.html
@@ -60,6 +60,6 @@
         });
     </script>
     <h3> Interested in becoming a beta tester? </h3>
-    <p> If you are going to be attending the University of British Columbia for the summer semester and are interested in beta testing the app, or if you are part of an organization looking to beta test the app, email us at PLACEHOLDER with your full name, year standing, and organization details (if applicable). </p>
+    <p> If you are going to be attending the University of British Columbia for the summer semester and are interested in beta testing the app, or if you are part of an organization looking to beta test the app, email us at uhub.team@gmail.com with your full name, year standing, and organization details (if applicable). </p>
 </div>
 </body>
