--- a/ourteam.html
+++ b/ourteam.html
@@ -50,7 +50,7 @@
             <h2 style="text-align: center"> About Us </h2>
             <p style="text-align: center; margin: 0 15%;"> We are four current UBC students with a clear vision to simplify student life. As finalists for the 2025 Innovation OnBoard Pitch Competition, we have met with and received approval from 
                 industry experts. As our development timeline progresses we are actively working with mentors, developers, and an overall larger team aiming to bring this project to life. If you are looking to get in touch with UHub's founders, email 
-                us at UHUBEMAIL.
+                us at uhub.team@gmail.com;
             </p>
         </div>
         </div>
