--- a/learnmore.html
+++ b/learnmore.html
@@ -12,7 +12,7 @@
         <div class="page-top">
             <div>   
                 <h1> UHub </h1>
-                <h3> Your University, Your Hub </h3> 
+                <h3 style="font-size: 2vw; margin-top: -1%"> Your University, Your Hub </h3> 
             </div>
                 <img class="logo" src="photos/uhublogo.png">
             </div>
