--- a/timeline.html
+++ b/timeline.html
@@ -47,8 +47,8 @@
             on the Learn more page! </p>
         </div>
         </div>
-        <div class="container" style="text-align: center; margin-left: 20%;">
-            <h3 style="color: white; font-size: 30px"> Full Launch </h3>
+        <div class="container" style="text-align: center; margin: auto;">
+            <h3 style="color: white; font-size: 30px; padding-top: 3%;" > Full Launch </h3>
             <h4 style="color: white; font-size: 18px"> September </h4>
             <p style="color: white; padding-bottom: 1%"> For the Fall semester, UHub will officially launch for public use at the University of Britsh Columbia. Afterwards, 
                 other universities will be considered for deployment. If you 
