--- a/index.html
+++ b/index.html
@@ -29,38 +29,41 @@
     </div>
     </div>
     <hr class="break">
-    <div class="forty-width">
-        <div>
-            <h2> What is UHub? </h2>
-            <p class="functionality"> University students are overwhelmed by scattered job postings, club events, and research opportunities across emails, websites, 
+        <div class="indexcontainer">
+            <div class="text-section">
+                <h2> What is UHub? </h2>
+                <p class="functionality"> University students are overwhelmed by scattered job postings, club events, and research opportunities across emails, websites, 
                 and social media. UHub is the AI-powered, all-in-one platform that centralizes these opportunities, ensuring students never miss out. Through smart 
                 recommendations, seamless applications, and targeted event promotion, UHub connects students with the right opportunities while helping universities, 
                 clubs, and recruiters reach engaged audiences. With a proven market need and scalable monetization strategies, UHub is revolutionizing student engagement. </p>
-        </div>
-        <div>
-            <h2> What can you do on UHub? </h2>
-            <div>
-            <p class="functionality"> UHub encompasses several great features to streamline the process of finding involvement. </p>
-            <h4> Access to all Campus Events and Opportunities </h4>
-            <p class="functionality"> On UHub, users can expect to find opportunities such as campus jobs, research positions, club opportunities, and other campus events.</p>
-            <h4> Follow Organizations </h4>
-            <p class="functionality"> Users are able to follow organizations and receive notifications about new events and opportunities, to ensure users don't miss out.
-            </p>
-            <h4> Seamless access to events </h4>
-            <p class="functionality"> With UHub's built-in RSVP proccess, a few clicks is all you need to RSVP for events. </p>
-            <h4> Direct and Indirect Applications to Opportunities </h4>
-            <p class="functionality"> Users can apply either directly or indirectly (based on organization preference) for opportunities at clubs, companies, labs, etc.</p>
-            <h4> Master Calendar </h4>
-            <p class="functionality"> With UHub's master calendar, organizations that you follow's events and application deadlines will all be compiled into a master calendar. By consolidating 
-                this information, users are able to keep up to date with all deadlines to ensure they're not missing out.
-            </p>
+                <h2> What can you do on UHub? </h2>
+                <p class="functionality"> UHub encompasses several great features to streamline the process of finding involvement. </p>
+                <h4> Access to all Campus Events and Opportunities </h4>
+                <p class="functionality"> On UHub, users can expect to find opportunities such as campus jobs, research positions, club opportunities, and other campus events.</p>
+                <h4> Follow Organizations </h4>
+                <p class="functionality"> Users are able to follow organizations and receive notifications about new events and opportunities, to ensure users don't miss out.
+                </p>
+                <h4> Seamless access to events </h4>
+                <p class="functionality"> With UHub's built-in RSVP proccess, a few clicks is all you need to RSVP for events. </p>
+                <h4> Direct and Indirect Applications to Opportunities </h4>
+                <p class="functionality"> Users can apply either directly or indirectly (based on organization preference) for opportunities at clubs, companies, labs, etc.</p>
+                <h4> Master Calendar </h4>
+                <p class="functionality"> With UHub's master calendar, organizations that you follow's events and application deadlines will all be compiled into a master calendar. By consolidating 
+                    this information, users are able to keep up to date with all deadlines to ensure they're not missing out.
+                </p>
+                <h2> Can I use UHub? </h2>
+                <p class="functionality"> If you are a student currently attending UBC, or if you are part of an organization associated with UBC or are looking to promote your organization, 
+                    UHub is right for you! Furthermore, if you are considering attending UBC and are looking to gain insight on the events and opportunities occurring at UBC, then you are free to browse the app!</p>
+                <h2> Interested? </h2>
+                <p class="functionality"> Head over to our Learn More page to find our Instagram link, as well as sign-up for email notifications and updates 
+                    on the development progress of the app! If you are intereted in becoming a beta tester, also find more details on the Learn More page.
+                </p>
+            </div>
+            <div class="image-section">
+                <img class="visuals" src="photos/UHub Graphics_Home Page_v01.png">
+                <img class="visuals" src="photos/UHub Graphics_Calendar_v01.png">
             </div>
         </div>
-        <div>
-            <h2> Can I use UHub? </h2>
-            <p class="functionality"> If you are a student currently attending UBC, or if you are part of an organization associated with UBC or are looking to promote your organization, UHub is right for you! Furthermore, if you are considering attending UBC and are looking to gain insight on the events and opportunities occurring at UBC, then you are free to browse the app!</p>
-        </div>
-    </div>
 </div>
 </body>
 </html>
